# OpenGL_On_MacOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Debug/: imgui.ini
Dependencies/assimp2/lib/: assimp
Dependencies/glew/2.1.0_1/: INSTALL_RECEIPT.json
Dependencies/glew/2.1.0_1/include/GL/: glew.h
Dependencies/glew/2.1.0_1/lib/: libGLEW.2.1.dylib
OpenGL/: CMakeLists.txt
OpenGL/res/shader/: BasicShader.glsl  LightShader.glsl  ModelShader.glsl  ObjectShader.glsl
OpenGL/src/: App_test.cpp  Applications.cpp  CMakeLists.txt  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
OpenGL/src/tests/: Test.cpp  Test.h  TestCamera.cpp  TestCamera.h  TestClearColor.cpp  TestClearColor.h  TestLight.cpp  TestLight.h  TestModel.cpp  TestModel.h  TestTexture.cpp  TestTexture.h
